[package]
edition = "2021"
name = "test-napi-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "serde-json",
] }
napi-derive = "2.12.2"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
